<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18A3FC"
    tools:context=".startactivitys.MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="405dp"
        android:layout_height="427dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_normal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/l_gica_ajudando_voc"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/bt_Criar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="130dp"
        android:background="@drawable/botao_branco"
        android:fontFamily="@font/montserrat_alternates"
        android:onClick="criar"
        android:text="@string/criar_conta"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/bt_Entrar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/botao_branco"
        android:fontFamily="@font/montserrat_alternates"
        android:onClick="entrar"
        android:text="@string/entrar"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/bt_Criar"
        app:layout_constraintStart_toStartOf="@+id/bt_Criar"
        app:layout_constraintTop_toBottomOf="@+id/bt_Criar" />
</androidx.constraintlayout.widget.ConstraintLayout>