<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragmentos_criar_conta.passo_um.Step_one">


    <Button
        android:id="@+id/bt_voltar_fragmento"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/vamos_come_ar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/selecione_o_seu_tipo_de_conta"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/bt_client"
        android:layout_width="275dp"
        android:layout_height="145dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/botao_branco"
        android:drawableStart="@drawable/ic_client"
        android:drawingCacheQuality="high"
        android:fontFamily="@font/montserrat_alternates"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:text="@string/cliente"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/bt_trab"
        android:layout_width="275dp"
        android:layout_height="145dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/botao_branco"
        android:drawableStart="@drawable/ic_trab"
        android:drawingCacheQuality="high"
        android:fontFamily="@font/montserrat_alternates"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:text="@string/trabalhador"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/bt_client"
        app:layout_constraintStart_toStartOf="@+id/bt_client"
        app:layout_constraintTop_toBottomOf="@+id/bt_client" />

</androidx.constraintlayout.widget.ConstraintLayout>